# manim-rubikscube

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  __init__.py  cube.py  cube_animations.py  cube_utils.py  cubie.py  pyproject.toml
docs/: Makefile  README.md  conf.py  requirements.txt
docs/source/: conf.py  documentation.oldrst  documentation.rst  documentation2.oldrst  index.rst  manim.cfg  manim_directive.py
docs/source/_static/: custom.css
kociemba/: coord.py  cubie.py  defs.py  face.py  moves.py  pruning.py  solver.py  symmetries.py
manim_rubikscube/: __init__.py  __main__.py  cube.py  cube_animations.py  cube_utils.py  cubie.py
manim_rubikscube/kociemba/: coord.py  cubie.py  defs.py  face.py  moves.py  pruning.py  solver.py  symmetries.py
manim_rubikscube/kociemba/tables/: fs_rep
olddocs/: documentation.rst  requirements.txt
