[tool.poetry]
name = "manim-rubikscube"
version = "0.0.8"
description = "A Manim implementation of a Rubik's Cube"
license = "GNU General Public License v3 (GPLv3)"
authors = ["KingWampy <none@ya.business>"]
readme = "README.rst"
repository = "https://github.com/WampyCakes/manim-rubikscube"
packages = [
    { include = "manim_rubikscube" },
]

[tool.poetry.plugins."manim.plugins"]
"manim_rubikscube" = "manim_rubikscube"

[tool.poetry.dependencies]
manim = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"